major frontend update
got a good bit of the frontend functionality working, and purged most of the unused template files. Next I need to add in functionality for adding a new project, deleting projects, adding checkpoints and deleting checkpoints.

--- a/react_frontend/src/index.css
+++ b/react_frontend/src/index.css
@@ -7,7 +7,36 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.project_element{
+    width: 100%;
 }
+
+.project_title{
+   text-align: center;
+}
+
+.checkpoint_timeline{
+    margin: auto;
+    width: 80%;
+    height: 20vw;
+}
+
+.checkpoint{
+    /*transform: rotate(-90deg);*/
+    text-align: center;
+
+    width : 99%;
+    height: 10vw;
+}
+
+.checkpoint.finished{
+    background-color: red;
+}
+
+.checkpoint.active{
+    /*transform: rotate(-90deg);
+    font-size: 10vw;*/
+}
+
+.checkpoint .name{}
