--- a/react_frontend/src/index.css
+++ b/react_frontend/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  text-align: center;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -9,8 +11,7 @@ body {
 
 
 .project_element{
-    text-align: center;
-
+    
     width: 100%;
 }
 
@@ -42,6 +43,11 @@ body {
 
 .checkpoint .name{
 
+}
+
+.add_checkpoint{
+  width: 60%;
+  height: 80%;
 }
 
 .remove_project {
