--- a/react_frontend/src/Components/projects.css
+++ b/react_frontend/src/Components/projects.css
@@ -1,48 +1,171 @@
 
+:root {
+  --main-white: #F3F5F4;
+  --main-dark: #3D3D3D;
+  --accent-light: #A2BBEB;
+  --accent-dark: #6376A6;
+  --accent-white: #9FA2BC;
+  --accent-dark-two: #8499B3;
+}
 
 
-.project_element{
-    
+
+
+
+@media (min-aspect-ratio: 1/1){
+  @media (min-width: 1400px){
+    #projects_body {
+      width: 1400px;
+    }
+  }
+
+
+  .project_element{
+    padding-top: 2vh;
     width: 100%;
-}
+    color: var(--main-dark);
+  }
 
-.project_title{
-   font-family: 'Roboto';
-   font-size: 5vh;
-}
+  .project_title{
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    font-family: 'Roboto';
+    font-size: 5vh;
+  }
 
-.checkpoint_timeline{
+  .remove_project {
+    height: 4vh;
+    width: 4vh;
+    line-height: 0vh;
+    font-size: 6vh;
+    margin-left: 10px;
+    border-radius: 100%;
+    border-width: 0px;
+    background-color: var(--accent-light);
+    color: var(--main-white);
+    border-color: var(--main-white);
+  }
+
+  .checkpoint_timeline{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      align-items: center;
+      width: 100%;
+      height: 20vh;
+      overflow-x: auto;
+      overflow-y: hidden;
+  }
+
+  ::-webkit-scrollbar {
+    height: 8px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: none;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--accent-dark);
+    border-radius: 6px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--main-dark);
+  }
+
+  .checkpoint_container{
+
     margin: auto;
-    width: 80%;
-    height: 20vh;
+    margin: 5px;
+    max-height: 20vh;
+    width: 200px;
+    min-width: 180px; 
+
+  }
+
+  .checkpoint_container.active{
+    width: 300px;
+  }
+
+  .checkpoint{
+      /*transform: rotate(-90deg);*/
+      background-color: var(--accent-light);
+      margin: auto;
+      max-height: 20vh;
+      text-align: center;
+      border-radius: 10px;
+      padding: 0 10px 0 10px;
+
+  }
+
+  .checkpoint.finished{
+      background-color: var(--accent-dark-two);
+      color: var(--main-white);
+  }
+
+  .checkpoint.active{
+      border-radius: 15px;
+
+      /*transform: rotate(-90deg);
+      font-size: 10vw;*/
+  }
+
+  .checkpoint .name{
+    padding: 10px;
+  }
+
+  .checkpoint.active .name{
+    font-size: 150%; 
+    padding: 5px;
+  }
+
+  .checkpoint .details{
+    max-height: 6vh;
+    overflow: auto;
+    padding: 5px;
+  }
+
+  .prev_delete_next{
+    margin: auto;
+    max-width: 150px; 
+  }
+
+  .add_checkpoint{
+    width: 30%;
+    height: 40%;
+  }
+
+  .add_project{
+    margin: 10px;
+    height: 6vh;
+    width: 6vh;
+    line-height: 0vh;
+    font-size: 5vh;
+    margin-left: 10px;
+    border-radius: 100%;
+    border-width: 0;
+    background-color: var(--accent-light);
+    color: var(--main-white);
+    border-color: var(--main-white);
+  }
 }
 
-.checkpoint{
-    /*transform: rotate(-90deg);*/
-    text-align: center;
-    width : 99%;
-}
-
-.checkpoint.finished{
-    background-color: red;
-}
-
-.checkpoint.active{
-    /*transform: rotate(-90deg);
-    font-size: 10vw;*/
-}
-
-.checkpoint .name{
+#projects_body {
+  margin: auto;
+  background-color: var(--main-white);
+  border-radius: 10px; 
 
 }
 
-.add_checkpoint{
-  width: 60%;
-  height: 80%;
-}
-
-.remove_project {
-
-    width: 10%;
+body {
+    height: 100vh;
+    background-color: var(--accent-white);
 
 }
+
+
